src/pages/my-claims/claim-list.module.scss
@import '../../styles/variables.module.scss';

$min-desktop-width: 900px;

.claimList {
  padding: 0;
  margin-top: 0;
  list-style: none;

  @media (min-width: $min-md) {
    margin-top: 1rem;
  }

  li {
    border-top: 1px solid $black-line-color;
    padding-top: $space-xxl;
    padding-bottom: $space-xxl;

    @media (min-width: $min-desktop-width) {
      padding-top: $space-lg;
      padding-bottom: $space-lg;
    }
  }

  // Width of the right-hand side of the list item (desktop layout)
  --width-rhs: 25px;

  li[data-active='true'] {
    --width-rhs: 260px;

    &[data-status='SettlementProposed'] {
      --width-rhs: 280px;
    }

    &[data-dispute-status='Solved'] {
      --width-rhs: 165px;
    }
  }
}

.claimItemContainer {
  display: flex;
  flex-direction: column;

  @media (min-width: $min-desktop-width) {
    flex-direction: row;
    align-items: center;
  }
}

.claimItemMain {
  flex: 1;
  font-weight: 500;
  box-sizing: border-box;
  padding-right: 0;

  @media (min-width: $min-desktop-width) {
    max-width: calc(100% - var(--width-rhs));
  }
}

.claimItemTitle {
  display: flex;
  align-items: center;
  gap: 0.5ch;
  margin-bottom: $space-md;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  color: $primary-color;
  text-decoration: none;

  svg {
    color: $pink-color;
    height: 20px;
  }

  @media (min-width: $min-desktop-width) {
    margin-bottom: $space-xxs;
  }
}

.claimItemInfo {
  display: inline-flex;
  font-size: $text-xsmall;
  line-height: $lh-xsmall;
  gap: 2ch;
  width: 100%;

  @media (min-width: $min-desktop-width) {
    white-space: nowrap;
  }
}

.status,
.desktopStatus {
  font-weight: 600;
  color: $secondary-color;
  display: inline-flex;
  align-items: center;
  gap: 0.5ch;

  svg {
    height: 14px;
    width: 18px;
    min-width: 18px;
  }
}

.desktopStatus {
  display: none;

  @media (min-width: $min-desktop-width) {
    display: inline-flex;
  }
}

[data-show-deadline='true'] {
  @media (min-width: $min-desktop-width) and (max-width: 1144px) {
    .claimId {
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }

    .createdAt {
      display: none;
    }
  }
}

.createdAt {
  display: inline;

  @media (min-width: $min-desktop-width) {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.claimActionInfo {
  display: flex;
  flex-direction: column;
  gap: 7px;
  font-weight: 500;
  line-height: $lh-normal;

  @media (min-width: $min-desktop-width) {
    align-items: flex-end;
    margin-left: auto;
    margin-right: 1rem;
    line-height: $lh-xsmall;
  }

  .pillContainer {
    display: none;
    @media (min-width: $min-desktop-width) {
      display: flex;
    }
  }
}

.arrowIconLink {
  display: none;
  width: 25px;

  @media (min-width: $min-desktop-width) {
    display: flex;
    align-items: center;
  }
}

.pillContainer {
  display: flex;
  justify-content: flex-end;
  gap: 1ch;
}

.pill,
.pillPrimary,
.pillExtra,
.pillDisabled {
  display: inline-flex;
  align-items: center;
  font-size: 10px;
  border: 1px solid #4f9182;
  padding: 4px 10px;
  line-height: 14px;
  border-radius: 10px;
  color: $secondary-color;
  white-space: nowrap;
}

.pillPrimary {
  background: #325b51;
  border-color: #95e8d5;
  color: $primary-color;
}

.pillExtra {
  display: none;

  @media (min-width: 660px) {
    display: inline-flex;
  }
}

.pillDisabled {
  color: $tertiary-color;
  border: 1px solid #325b51;
}

.mobileStatusRow {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: $text-xsmall;
  line-height: $lh-xsmall;
  font-weight: 400;
  margin-bottom: $space-xs;

  .status {
    margin-right: 1ch;
  }

  @media (min-width: $min-desktop-width) {
    display: none;
  }
}

